# vecpp

./: .gitignore  .gitmodules  .travis.yml  404.html  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  appveyor.yml  index.html  mkdocs.yml  sitemap.xml
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
dev-guide/: index.html
docs/: index.md
docs/dev-guide/: index.md
docs/reference/: angle.md  index.md  vec.md
docs/reference/angle/: arithmetic.md  arithmetic_inplace.md  as.md  cos.md  format.md  from.md  from_clamped.md  index.md  op_cmp.md  raw.md  scale.md  scale_inplace.md  sin.md  tan.md  unary_minus.md
docs/reference/mat/: at.md  constructor.md  data.md  determinant.md  format.md  index.md  op_cmp.md  op_per_mem.md  op_per_mem_compound.md  operator_at.md  scaling.md  scaling_compound.md  transpose.md  unary_minus.md
docs/reference/vec/: abs.md  at.md  begin.md  constructor.md  cross.md  data.md  dot.md  end.md  format.md  index.md  length.md  max.md  min.md  norm.md  op_cmp.md  op_per_mem.md  op_per_mem_compound.md  operator_at.md  scaling.md  scaling_compound.md  unary_minus.md
docs/user-guide/: constexpr.md  installation.md  performance.md
include/vecpp/: angle.h  config.h  constants.h  flags.h  mat.h  mat_gen.h  mat_mul.h  pi.h  quat.h  transform_3d.h  vec.h  vecpp.h
include/vecpp/angle/: angle.h  operations.h
include/vecpp/mat/: inverse.h  mat.h  mat_gen.h  mat_mul.h  mul.h  operations.h
include/vecpp/quat/: quat.h
include/vecpp/scalar/: constants.h  functions.h  functions_ct.h  functions_rt.h  operations.h
include/vecpp/scalar/ct/calc/: absolute.h  exponential.h  modulo.h  power.h  square_root.h
include/vecpp/scalar/ct/misc/: inf_nan.h  sign.h
include/vecpp/scalar/ct/rounding/: fractional.h  round.h  round_down.h  round_up.h  truncate.h
include/vecpp/scalar/ct/trigonometry/: cosine.h  sine.h  tangent.h
include/vecpp/scalar/ct/trigonometry/bound/: cosine_pi4.h  sine_pi4.h
include/vecpp/transforms/affine/: scale.h  translate.h
include/vecpp/transforms/projection/: ortho2D.h
include/vecpp/vec/: operations.h  operations_per_member.h  vec.h
misc/: notice.txt
reference/: angle.html  index.html  vec.html
reference/angle/: arithmetic.html  arithmetic_inplace.html  as.html  cos.html  format.html  from.html  from_clamped.html  index.html  op_cmp.html  raw.html  scale.html  scale_inplace.html  sin.html  tan.html  unary_minus.html
reference/angle/arithmetic/: index.html
reference/angle/arithmetic_inplace/: index.html
reference/angle/as/: index.html
reference/angle/format/: index.html
reference/angle/from/: index.html
reference/angle/from_clamped/: index.html
reference/angle/op_cmp/: index.html
reference/angle/scale/: index.html
reference/angle/scale_inplace/: index.html
reference/angle/unary_minus/: index.html
reference/mat/: at.html  constructor.html  data.html  determinant.html  format.html  index.html  op_cmp.html  op_per_mem.html  op_per_mem_compound.html  operator_at.html  scaling.html  scaling_compound.html  transpose.html  unary_minus.html
reference/vec/: abs.html  at.html  begin.html  constructor.html  cross.html  data.html  dot.html  end.html  format.html  index.html  length.html  max.html  min.html  norm.html  op_cmp.html  op_per_mem.html  op_per_mem_compound.html  operator_at.html  scaling.html  scaling_compound.html  unary_minus.html
reference/vec/abs/: index.html
reference/vec/at/: index.html
reference/vec/begin/: index.html
reference/vec/constructor/: index.html
reference/vec/cross/: index.html
reference/vec/data/: index.html
reference/vec/dot/: index.html
reference/vec/end/: index.html
reference/vec/format/: index.html
reference/vec/length/: index.html
reference/vec/max/: index.html
reference/vec/min/: index.html
reference/vec/op_cmp/: index.html
reference/vec/op_per_mem/: index.html
reference/vec/op_per_mem_compound/: index.html
reference/vec/operator_at/: index.html
reference/vec/scaling/: index.html
reference/vec/scaling_compound/: index.html
reference/vec/unary_minus/: index.html
search/: search_index.json
tests/: CMakeLists.txt  angle.cpp  documentation.cpp  failing.cpp  quat.cpp  scalar.cpp  single_header.cpp  transform.cpp
tests/mat/: constexpr.cpp  construction.cpp  inversion.cpp  mul.cpp  operations.cpp
tests/vec/: algos.cpp  constexpr.cpp  construction.cpp  operators.cpp
user-guide/: constexpr.html  index.html  installation.html  performance.html
user-guide/constexpr/: index.html
user-guide/installation/: index.html
vecpp/: config.h  traits.h  vecpp.h  vecpp_single.h
vecpp/angle/: angle.h
vecpp/mat/: mat.h  operations.h
vecpp/quat/: quat.h
vecpp/scalar/: constants.h  non_cste_stdlib.h  operations.h
vecpp/vec/: operations.h  operations_per_member.h  vec.h
